--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@ color: white;
       100% { color: red; }
     }
 .background-image {
-  background-image: url(../imgs/sunflower.jpg);
+  background-image: url(../imgs/background.jpg);
   color: white;
 }
 .submit-button {
