adds working email post

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,14 @@
           {{this.firstName}}
           {{this.birthday}}
           </li>
+
+          
+         <form method="GET" action="/email">
+           <button type="submit">Email Hot Date</button>
+         </form> 
           {{/each}}
+
+
         </ul>
       </div>
     </div>
