--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,6 @@
     <h1 class="center">Matches</h1>
   </div>
   <div class="row">
-
     <div class="col-2"></div>
     <div class="col">
       <ol>
@@ -34,17 +33,16 @@
           </section>
           {{!-- Come back here for the uploading of a photo --}}
           <section>
-          <form method="GET" action="/email">
-           <button class="match-button">Match!</button>
-         </form> 
-            
+            <img class"img" src={{this.imageURL}} />
+          </section>
+          <section>
+            <button class="match-button">Match!</button>
           </section>
           <br><br><br><br><br>
         </div>
       </li>
       {{/each}}
     </ol>
-
     </div>
   </div>    
       
