--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,28 @@
- <div class="row">
-    <h1 class="center">Matches</h1>
-  </div>
-  <div class="row">
+<div class="row">
+  <h1 class="center">Matches</h1>
+</div>
+<div class="row">
 
-    <div class="col-2"></div>
-    <div class="col">
-      <ol>
+  <div class="col-2"></div>
+  <div class="col">
+    
+    <ol>
+      
       {{#each profiles}}
       <li class='profile-info'>
+        
         <div class="row d-flex">
+          
           <section>
             <p>Name</p>
             {{this.firstName}}
           </section>
           <section>
-            <p>Age</p> 
+            <p>Age</p>
             {{this.birthday}}
           </section>
           <section>
-            <p>Gender</p>git pull
+            <p>Gender</p>
             {{this.gender}}
           </section>
           <section>
@@ -29,25 +33,91 @@
             <p>Biography</p>
             {{this.biography}}
           </section>
-
-          {{!-- Come back here for the uploading of a photo --}}
           <section>
             <img class"profile-picture" src={{this.imageURL}} />
           </section>
           <section>
-          <form method="GET" action="/email">
-           <button class="match-button">Match!</button>
-         </form> 
-            
+
+            <button data-toggle="modal" data-target="#exampleModal" data-rid={{this.UserId}}
+              class="match-button">Match!</button>
+
           </section>
           <br><br><br><br><br>
         </div>
       </li>
       {{/each}}
     </ol>
+  </div>
+</div>
 
+<div id="exampleModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title">Email Hot Date</h3>
+       
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="contact">
+          <form method="POST" action="email">
+            <p>
+              <label>Your Name</label>
+              <input id="name" type="text" name="name">
+            </p>
+           
+              <p name="remail" class="remail"></p>
+          
+            <p>
+              <label>Your Phone Number</label>
+              <input id="phone" type="text" name="phone">
+            </p>
+            <p class="full">
+              <label>Message</label>
+              <textarea id="message" name="message" rows="5"></textarea>
+            </p>
+            <p class="full">
+              <button id="sendmail" type="submit">Submit</button>
+            </p>
+          </form>
+
+        </div>
+      </div>
     </div>
-  </div>    
+    <div class="modal-footer">
+      <button id="close" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-primary">Save changes</button>
+    </div>
+  </div>
+</div>
+</div>
+
+<script>
+  $(document).ready(() => {
+    const RID = []
+
+    $(".match-button").on("click", function () {
+      rid = $(this).data("rid");
+      RID.push(rid)
+      console.log(RID)
+
+    $.get("/findEmail/" + RID[0]).then((data) => {
       
+      $(".remail").text(data.data[0].email) 
+
+      //console.log("email: " + JSON.stringify(data.data[0].email))
+    })
+
+  });
+
     
- 
+  
+  })
+</script>
+{{!-- <script src="..public/js/email.js" type="text/javascript"></script> --}}
+
+  {{!-- $("#sendmail").on("click", function () {
+      alert("Email Sent!")
+    }) --}}
