--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,3 +78,40 @@ color: white;
 .hidden {
   display: none;
 }
+
+.fat-nav {
+  color: white;
+  font-size: 40px;
+  padding-left: 50px;
+}
+
+.norm-nav {
+  color: white;
+  font-size: 30px;
+  padding-left: 50px;
+}
+
+.tagline {
+  font-size: 20px;
+  color: #ffc1d6;
+  padding-left: 20px;
+
+}
+.logout {
+  color: white;
+  font-size: 20px;
+}
+
+.pink-btn {
+  color: white;
+  background-color: #e91d63;
+}
+
+.home-jumbo {
+  margin-top: 40px;
+  color: white;
+  background-color: #e91d63;
+}
+
+
+
