--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,15 @@
+<nav class="navbar" style="background-color: #e91d63">
+    <a href="/home" class="fat-nav">
+      <img src="/imgs/smasualLogo.jpg" width="50" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+      <span>Smasual</span>
+      <span class="tagline">The best casual hook-up site. Smash casually.</span>
+    </a>
+    <a class="navbar-brand logout" href="/logout">
+      Logout
+    </a>
+</nav>
+<br/>
+
 <div class="row">
   <h1 class="center">Matches</h1>
 </div>
@@ -19,7 +31,7 @@
           </section>
           <section>
             <p>Age</p>
-            {{this.birthday}}
+            {{this.age}}
           </section>
           <section>
             <p>Gender</p>
@@ -53,8 +65,8 @@
 <div id="exampleModal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title">Email Hot Date</h3>
+      <div class="modal-header" style="background-color: #e91d63">
+        <h3 class="modal-title" style="color: white">Email Hot Date</h3>
        
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -77,12 +89,13 @@
               <label>Your Phone Number</label>
               <input id="phone" type="text" name="phone">
             </p>
+            <p>Message for your Hot Date; make it special!</p>
             <p class="full">
-              <label>Message</label>
+              <label></label>
               <textarea id="message" name="message" rows="5"></textarea>
             </p>
             <p class="full">
-              <button action="/home" id="sendmail" type="submit">Submit</button>
+              <button action="/home" id="sendmail" type="submit" class="pink-btn">Submit</button>
             </p>
           </form>
 
