Add more styling to the bio and results page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,10 +33,10 @@
           </section>
           {{!-- Come back here for the uploading of a photo --}}
           <section>
-            <img class"img" src={{this.imageURL}} />
+            <img class="profile-picture" src={{this.imageURL}} />
           </section>
           <section>
-            <button class="match-button">Match!</button>
+            <a class="btn btn-primary buttonz"><img class="button-image-icon" src="/imgs/icon.png">masual</a>
           </section>
           <br><br><br><br><br>
         </div>
