--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,10 +71,7 @@ color: white;
   font-weight: bold;
 } */
 
-.profile-picture{
-  height: 150px;
-  width: auto;
-}
+
 .buttonz{
   background-color: #e91d62;
   border-color: #e91d62;
@@ -129,4 +126,16 @@ color: white;
   margin-top: 40px;
   color: white;
   background-color: #e91d63;
+}
+
+
+
+img {
+  height: 150px;
+  width: auto;
+}
+
+.button-image-icon {
+  width: 40px !important;
+  height: auto;
 }
